Working Map structure.

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
-    <qresource prefix="/Maps">
+    <qresource prefix="/Maps"/>
+    <qresource prefix="/MapCoord">
         <file>coordinates.txt</file>
     </qresource>
 </RCC>
